--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "date-fns": "^2.30.0",
     "vue": "^2.7.14",
     "vuesax": "^4.0.1-alpha.25"
   },
